--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,8 +1,18 @@
 <ion-modal-view>
     <ion-header-bar>
-        <h1 class="title">My Modal title</h1>
+        <h1 class="title">Login</h1>
     </ion-header-bar>
     <ion-content>
-        Hello!
+        <div class="list list-inset">
+            <label class="item item-input">
+                <input type="text" placeholder="Email" ng-model="user.email">
+            </label>
+            <label class="item item-input">
+                <input type="password" placeholder="Password" ng-model="user.password">
+            </label>
+            <button class="button button-block button-positive" ng-click="login(user)">
+               Submit
+            </button>
+        </div>
     </ion-content>
 </ion-modal-view>
